--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <resources>
     <string name="app_name">Vorgo Apps</string>
-    <string name="title_activity_navbar">Navbar</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
-    <string name="title_activity_bottom_nav">BottomNav</string>
-
+    <string name="welcome">Welcome</string>
+    <string name="logo">logo</string>
+    <string name="password">Password</string>
+    <string name="input_your_username_here">Input your username here</string>
+    <string name="chat">Chat</string>
+    <string name="friend_list">Friend</string>
+    <string name="project">Project</string>
+    <string name="task">My Task</string>
+    <string name="more">More</string>
 </resources>
