--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="project">Project</string>
     <string name="task">My Task</string>
     <string name="more">More</string>
+    <string name="min_pass">Password is too short, enter minimum 6 characters!</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
